--- a/package.json
+++ b/package.json
@@ -1,42 +1,20 @@
 {
-  "name": "resend-email-backend",
+  "name": "mimaht-otp-server",
   "version": "1.0.0",
-  "description": "A Node.js backend service for sending emails using Resend API",
+  "description": "Mimaht OTP email server for Render.com",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
-  "keywords": [
-    "resend",
-    "email",
-    "backend",
-    "api",
-    "nodejs",
-    "express"
-  ],
-  "author": "Your Name",
-  "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "resend": "^3.2.0",
     "cors": "^2.8.5",
-    "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
+    "dotenv": "^16.3.1",
+    "resend": "^2.0.0",
+    "@supabase/supabase-js": "^2.38.0"
   },
   "engines": {
-    "node": ">=16.0.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "your-repo-url"
-  },
-  "bugs": {
-    "url": "your-repo-url/issues"
-  },
-  "homepage": "your-repo-url#readme"
+    "node": ">=18.0.0"
+  }
 }
